--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
+:root {
+  --accent: #bf50eb;
+  --accent-light: #be82d6;
+  --pure-white: #fff;
+}
+
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -10,4 +17,58 @@ html {
 
 body {
   font-family: "Open Sans", sans-serif;
+  margin: 0;
+}
+
+.container {
+  width: 1140px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.header {
+  background-color: var(--accent);
+}
+
+header a {
+  color: var(--pure-white);
+  text-decoration: none;
+}
+.header-nav {
+  min-height: 47px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-logo {
+  width: 20%;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 2px;
+  line-height: 35px;
+}
+.header-logo img {
+  width: 100%;
+  height: 60%;
+  object-fit: contain;
+}
+.header-menu {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  font-size: 0;
+}
+
+.header-menu-link {
+  text-transform: uppercase;
+  padding: 15px;
+  font-size: 16px;
+  line-height: 16px;
+  transition: background-color 0.3s;
+}
+
+.header-menu-link:hover {
+  background-color: var(--accent-light);
 }
