--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ body {
   margin: 0 auto;
   padding: 0 15px;
 }
+.section-title {
+  text-transform: uppercase;
+  text-align: center;
+}
 
 .header {
   background-color: var(--accent);
@@ -98,4 +102,18 @@ header a {
 .intro-right h1,
 .intro-right h3 {
   margin: 0 0 10px;
+}
+
+.contacts ul {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 25px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.contacts li {
+  text-align: center;
 }
