--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,10 @@ header a {
   margin: 0 0 10px;
 }
 
+.contacts {
+  margin-bottom: 60px;
+}
+
 .contacts ul {
   display: flex;
   justify-content: center;
@@ -116,4 +120,26 @@ header a {
 
 .contacts li {
   text-align: center;
+}
+
+.skills {
+  padding: 60px 0;
+  color: var(--pure-white);
+  background-color: var(--accent);
+}
+
+.skills ul {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 15px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.skills li {
+  padding: 10px 25px;
+  background-color: var(--accent-light);
+  background-radius: 4px;
 }
