--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,11 @@ body {
   margin: 0 auto;
   padding: 0 15px;
 }
+
+.section {
+  padding: 60px 0;
+}
+
 .section-title {
   text-transform: uppercase;
   text-align: center;
@@ -123,7 +128,6 @@ header a {
 }
 
 .skills {
-  padding: 60px 0;
   color: var(--pure-white);
   background-color: var(--accent);
 }
@@ -141,5 +145,27 @@ header a {
 .skills li {
   padding: 10px 25px;
   background-color: var(--accent-light);
-  background-radius: 4px;
+  border-radius: 4px;
+}
+
+.code-example {
+  text-align: center;
+}
+
+.code-example p {
+  font-style: italic;
+}
+
+.code-example b {
+  font-style: normal;
+}
+
+.code-example pre {
+  width: 50%;
+  margin: 0 auto;
+  text-align: left;
+  font-size: 1.2em;
+  color: var(--pure-white);
+  background-color: var(--accent);
+  border-radius: 8px;
 }
